# OCR-app

./: .gitignore  .gitmodules  README.md  sign-apk.sh
app/: build.gradle.kts
app/src/androidTest/java/dev/davidv/ocr/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/bindings/: Cargo.toml
app/src/main/bindings/src/: lib.rs
app/src/main/java/dev/davidv/ocr/: MainActivity.kt  OcrAppViewModel.kt  OcrNativeBridge.kt
app/src/main/java/dev/davidv/ocr/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: ic_launcher_background.xml
app/src/test/java/dev/davidv/ocr/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
