[package]
name = "ocr_bindings"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "ocr_bindings"
path = "src/lib.rs"

[dependencies]
image = "0.25.10"
imageproc = "0.25.0"
jni = "0.21.1"
log = "0.4.28"
ocr-rs = { path = "../../../../third_party/rust-paddle-ocr", features = ["build-mnn-from-source"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
strip = true
